package com.irina.myfirstgame.systems;

import java.util.List;

/**
 * Système de particules pour les effets visuels.
 * <p>
 * Stub pour une fonctionnalité future de gestion de particules.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class ParticleSystem {
    private List<Emitter> emitters;
    
    public void emit() {
    }
    
    public void update(float delta) {
    }
}

