package com.irina.myfirstgame.systems;

import com.irina.myfirstgame.entities.Entity;
import com.irina.myfirstgame.entities.valueobjects.Vector2;

/**
 * Système de physique pour appliquer les forces et mouvements aux entités.
 * <p>
 * Stub pour une fonctionnalité future de simulation physique.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Physics {
    public void apply(Entity entity, float delta) {
    }
    
    public Vector2 integrate(Vector2 position, Vector2 velocity, float delta) {
        return null;
    }
}

